--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "3.6.16",
   "description": "A plugin for Obsidian that allows you to add banners to your notes",
   "author": "Pixel Banner",
-  "license": "MIT",
+  "license": "Apache-2.0",
   "repository": {
     "type": "git",
     "url": "https://github.com/pixel-banner/pixel-banner.git"
